Get Article by ID and some cleanups

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,5 @@ html
         class="stripe-button",
         data-key=keyPublishable,
         data-locale="auto",
-        data-description="Sample Charge",
+        data-description="Premium Purchased",
         data-amount="1000")
